# Chat-with-Database-Using-LLM

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: database.py  prompts.py
app/api/routes/: chat.py
app/core/: config.py  llm.py  prompts.py
app/database/: db.py  security.py
app/schemas/: chat_schema.py
app/services/: chat_service.py
app/static/.well-known/appspecific/: com.chrome.devtools.json
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
