[project]
name = "chat-with-database-using-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "langchain-google-genai==1.0.6",
    "llama-cpp-python==0.2.90",
    "pandas==2.1.3",
    "pydantic==2.5.0",
    "uvicorn==0.24.0",
]
